rewrite-javascript: pin is-even version + use Files.readString in parity test